--- a/example/app/views/Application/index.html
+++ b/example/app/views/Application/index.html
@@ -1,4 +1,12 @@
 #{extends 'main.html' /}
 #{set title:'Home' /}
 
-#{welcome /}
+<h2>playframework on Twitter</h2>
+<ul>
+#{list playframeworkTwitter.asXml().entry}
+    <li>
+        %{ arr = _.author.uri.text().split("/"); author = arr[arr.length - 1] }%
+        <a href="${_.author.uri}">${author}</a>: ${_.content.raw()}
+    </li>
+#{/list}
+</ul>
